crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_partition_root('ptif_test01_index');"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..44
        Sconst@25..44 "'ptif_test01_index'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

