crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_partition_root('ptif_test3_index');"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..43
        Sconst@25..43 "'ptif_test3_index'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

