crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM pg_partition_ancestors('ptif_test');"
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..48
    List@14..48
      FuncCall@14..48
        Ident@14..36 "pg_partition_ancestors"
        Ascii40@36..37 "("
        AConst@37..48
          Sconst@37..48 "'ptif_test'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

