crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM pg_partition_ancestors('ptif_test_index');"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..54
    List@14..54
      FuncCall@14..54
        Ident@14..36 "pg_partition_ancestors"
        Ascii40@36..37 "("
        AConst@37..54
          Sconst@37..54 "'ptif_test_index'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

