crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_partition_root('ptif_normal_table');"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..44
        Sconst@25..44 "'ptif_normal_table'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

