crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE ptif_li_parent ();
---
CreateStmt@0..31
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "ptif_li_parent"
  Whitespace@27..28 " "
  Ascii40@28..29 "("
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

